improve fetching stops
better stop info
